--- a/3_multi_agent_collaboration/hedge_fund_multi_agent.ipynb
+++ b/3_multi_agent_collaboration/hedge_fund_multi_agent.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Each of the sub agents have access to three tools each that can access `APIs` to fetch financial data on ticker symbols and search the web. Based on the user question, the supervisor agent hedge assistant will be able to call the appropriate sub agent. The sub agent will then identify the question and call one of the functions that it has access to, and return the answer back to the user. View the diagram of what this looks like below:\n",
     "\n",
-    "![multi-agent-diagram](../multi-agent-diagram.png)\n",
+    "![multi-agent-diagram](multi-agent-diagram.png)\n",
     "\n",
     "This agent will make usage of the `SUPERVISOR_ROUTER` collaboration mode in order to get the user's intent classification routed to the correct sub-agent\n",
     "\n",
