--- a/0_fundamental_analyst_agent/fundamental_analyst_agent.ipynb
+++ b/0_fundamental_analyst_agent/fundamental_analyst_agent.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +118,17 @@
     "\n",
     "s3_client = boto3.client('s3', region)\n",
     "bedrock_client = boto3.client('bedrock-runtime', region)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install wandb uuid_utils emoji gql"
    ]
   },
   {
@@ -166,14 +177,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "cwd_directory = os.getcwd()\n",
+    "parent_dir = os.path.dirname(cwd_directory)\n",
+    "env_path = os.path.join(parent_dir,'.env')\n",
+    "\n",
     "# Load the environment variables that are defined in the \".env\" file. This contains the \n",
     "# financial data API key that will enable the user to access the data\n",
-    "load_dotenv"
+    "load_dotenv(env_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(os.getenv('FINANCIAL_DATASETS_API'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,18 +384,18 @@
     "\n",
     "# Create a Lambda client and attach the API key as env variable to the lambda function\n",
     "lambda_client = boto3.client('lambda')\n",
-    "lambda_function_name = f'{SUB_AGENT_FUNDAMENTAL_ANALYST}-lambda'\n",
-    "environment_variables = {\n",
-    "    'FINANCIAL_DATASETS_API_KEY': os.getenv('FINANCIAL_DATASETS_API_KEY')\n",
-    "}"
+    "lambda_function_name = f'{SUB_AGENT_FUNDAMENTAL_ANALYST}-lambda'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "environment_variables = {\n",
+    "    'FINANCIAL_DATASETS_API_KEY': os.getenv('FINANCIAL_DATASETS_API')\n",
+    "}\n",
     "# Update the Lambda function's configuration to include the environment variables\n",
     "# In the case of this agent, we need the financial dataset API as an env variable passed to the lambda\n",
     "# so that it can be used in fetching data based on user questions\n",
@@ -397,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +553,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -542,9 +567,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
