--- a/1_technical_analyst_agent/technical_analyst_agent.ipynb
+++ b/1_technical_analyst_agent/technical_analyst_agent.ipynb
@@ -349,12 +349,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if region == \"us-west-2\":\n",
+    "    NOVA_LITE = f\"us.{NOVA_LITE}\"\n",
+    "    logger.info(f\"Using the cross region inference model id for the technical analyst agent: {NOVA_LITE}\")\n",
+    "\n",
     "# Update your agent creation code to include the action_group_config\n",
     "technical_analyst_agent = agents.create_agent(\n",
     "    SUB_AGENT_NAME_TECHNICAL_ANALYST,\n",
     "    agent_description,\n",
     "    agent_instruction,\n",
-    "    NOVA_LITE,\n",
+    "    NOVA_LITE, # change to \"us.<model-id> for cross region inference if you are using the agent in us.west.2\"\n",
     ")"
    ]
   },
