--- a/2_ market_analyst_agent/market_analysis_agent.ipynb
+++ b/2_ market_analyst_agent/market_analysis_agent.ipynb
@@ -369,7 +369,7 @@
     "lambda_function_name = f'{SUB_AGENT_MARKETING_ANALYST}-lambda'\n",
     "environment_variables = {\n",
     "    'FINANCIAL_DATASETS_API_KEY': os.getenv('FINANCIAL_DATASETS_API_KEY'),\n",
-    "    'TAVILY_API_KEY': os.getenv('TAVILY_API_KEY')\n",
+    "    'TAVILY_API_KEY': os.getenv('TRAVILY_API_KEY')\n",
     "}"
    ]
   },
