--- a/3_multi_agent_collaboration/hedge_fund_multi_agent.ipynb
+++ b/3_multi_agent_collaboration/hedge_fund_multi_agent.ipynb
@@ -86,6 +86,7 @@
     "import json\n",
     "import time\n",
     "import uuid\n",
+    "import boto3\n",
     "import logging\n",
     "\n",
     "# Get the current file's directory\n",
@@ -125,6 +126,20 @@
     "# set a logger\n",
     "logging.basicConfig(format='[%(asctime)s] p%(process)s {%(filename)s:%(lineno)d} %(levelname)s - %(message)s', level=logging.INFO)\n",
     "logger = logging.getLogger(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = boto3.session.Session()\n",
+    "sts_client = boto3.client('sts')\n",
+    "account_id = sts_client.get_caller_identity()[\"Account\"]\n",
+    "region = session.region_name\n",
+    "\n",
+    "logger.info(f\"current region: {region}\")"
    ]
   },
   {
@@ -208,6 +223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if region == \"us-west-2\":\n",
+    "    NOVA_LITE = f\"us.{NOVA_LITE}\"\n",
+    "    logger.info(f\"Current region is {region}. Using the cross region inference profile model id: {NOVA_LITE}\")\n",
+    "\n",
     "supervisor_agent = agents.create_agent(\n",
     "    agent_name,\n",
     "    agent_description,\n",
@@ -297,10 +316,9 @@
    "outputs": [],
    "source": [
     "multi_agent_names = {\n",
-    "    f\"{fundamental_analyst_agent_id}/{fundamental_analyst_agent_alias_id}\": SUB_AGENT_FUNDAMENTAL_ANALYST,\n",
-    "    f\"{technical_analyst_agent_id}/{technical_analyst_agent_alias_id}\": SUB_AGENT_NAME_TECHNICAL_ANALYST,\n",
-    "    f\"{marketing_agent_id}/{marketing_agent_alias_id}\": SUB_AGENT_MARKETING_ANALYST,\n",
-    "    f\"{supervisor_agent_id}/{supervisor_agent_alias_id}\": agent_name\n",
+    "    f'{fundamental_analyst_agent_id}/{fundamental_analyst_agent_alias_id}': SUB_AGENT_FUNDAMENTAL_ANALYST,\n",
+    "    f'{technical_analyst_agent_id}/{technical_analyst_agent_alias_id}': SUB_AGENT_NAME_TECHNICAL_ANALYST,\n",
+    "    f'{marketing_agent_id}/{marketing_agent_alias_id}': SUB_AGENT_MARKETING_ANALYST\n",
     "}"
    ]
   },
@@ -310,19 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multi_agent_names = {'PLG9OXILLU/4JZJVMDGU6': 'fundamental-analyst-agent',\n",
-    " 'XIYYHTW7GH/X0OOOOEXXL': 'technical-analyst-agent',\n",
-    " 'FQKUCMSBPE/65H2UJP7TF': 'market-analysis-agent',\n",
-    " 'LBJNKGJXXX/3DLZAEH8WS': 'multi-agent-hedge-fund'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "supervisor_agent_id = 'LBJNKGJXXX'"
+    "multi_agent_names"
    ]
   },
   {
@@ -335,7 +341,7 @@
     "session_id:str = str(uuid.uuid1())\n",
     "\n",
     "response = agents.invoke(\n",
-    "    \"\"\"How many shares of AAPL has General Counsel sold over the past year?\"\"\",\n",
+    "    \"\"\"How many shares of AAPL has General Counsel sold over the past year?\"\"\", \n",
     "    supervisor_agent_id,\n",
     "    session_id=session_id,\n",
     "    enable_trace=True,\n",
