code updates, working version

--- a/0_fundamental_analyst_agent/fundamental_analyst_agent.ipynb
+++ b/0_fundamental_analyst_agent/fundamental_analyst_agent.ipynb
@@ -361,7 +361,7 @@
     "lambda_client = boto3.client('lambda')\n",
     "lambda_function_name = f'{SUB_AGENT_FUNDAMENTAL_ANALYST}-lambda'\n",
     "environment_variables = {\n",
-    "    'FINANCIAL_DATASETS_API_KEY': os.getenv('FINANCIAL_DATASETS_API_KEY')\n",
+    "    'FINANCIAL_DATASET_API': os.getenv('FINANCIAL_DATASET_API')\n",
     "}"
    ]
   },
@@ -524,6 +524,13 @@
     "%store fundamental_analyst_agent_alias_arn\n",
     "%store fundamental_analyst_agent_arn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
