--- a/3_multi_agent_collaboration/hedge_fund_multi_agent.ipynb
+++ b/3_multi_agent_collaboration/hedge_fund_multi_agent.ipynb
@@ -388,7 +388,9 @@
    "metadata": {},
    "source": [
     "### Route to the `Marketing analyst agent` to get news by searching on web\n",
-    "---"
+    "---\n",
+    "\n",
+    "Routing requests to a sub agent that sequentially calls two functions to get the response to the user question. In this example below, the marketing analyst agent uses the `get_options_chain` and `get_news` functions."
    ]
   },
   {
