--- a/1_technical_analyst_agent/technical_analyst_agent.ipynb
+++ b/1_technical_analyst_agent/technical_analyst_agent.ipynb
@@ -383,7 +383,7 @@
     "lambda_client = boto3.client('lambda')\n",
     "lambda_function_name = f'{SUB_AGENT_FUNDAMENTAL_ANALYST}-lambda'\n",
     "environment_variables = {\n",
-    "    'FINANCIAL_DATASETS_API_KEY': os.getenv('FINANCIAL_DATASETS_API_KEY')\n",
+    "    'FINANCIAL_DATASET_API': os.getenv('FINANCIAL_DATASET_API')\n",
     "}"
    ]
   },
@@ -498,6 +498,13 @@
     "%store technical_analyst_agent_alias_arn\n",
     "%store techical_analyst_agent_arn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
