--- a/2_ market_analyst_agent/market_analysis_agent.ipynb
+++ b/2_ market_analyst_agent/market_analysis_agent.ipynb
@@ -368,8 +368,8 @@
     "lambda_client = boto3.client('lambda')\n",
     "lambda_function_name = f'{SUB_AGENT_MARKETING_ANALYST}-lambda'\n",
     "environment_variables = {\n",
-    "    'FINANCIAL_DATASETS_API_KEY': os.getenv('FINANCIAL_DATASETS_API_KEY'),\n",
-    "    'TAVILY_API_KEY': os.getenv('TRAVILY_API_KEY')\n",
+    "    'FINANCIAL_DATASET_API': os.getenv('FINANCIAL_DATASET_API'),\n",
+    "    'TAVILY_API_KEY': os.getenv('TAVILY_API_KEY')\n",
     "}"
    ]
   },
@@ -511,6 +511,13 @@
     "%store marketing_agent_alias_arn\n",
     "%store marketing_agent_arn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
